[ADD] twitch icon to the social bar. [UPDATE] homepage overlay with a blue and correct spacing

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -91,6 +91,9 @@ a:hover{
 .ml-20 {
   margin-left: 20px;
 }
+.ml-10 {
+  margin-left: 10px;
+}
 .mr-20 {
   margin-right: 20px;
 }
