--- a/public/styles/homeoverlay.css
+++ b/public/styles/homeoverlay.css
@@ -2,7 +2,8 @@
 .overlay-cont {
     position: absolute;
     z-index: 11;
-    background-color: #111111;
+    background-color: #111111b9;
+    backdrop-filter: blur(2px);
     width: 50;
     padding: 30px 40px;
     box-sizing: border-box;
@@ -10,6 +11,7 @@
     flex-direction: column;
     align-items: center;
 }
+
 .homepage-cont {
     height: 100%;
     display: flex;
